# slynqix

./: Cargo.toml
frontend/: Cargo.toml  index.html  tailwind.config.js
frontend/src/: app.rs  main.rs
frontend/src/components/: analysis_table.rs  coming_soon.rs  header.rs  journal_form.rs  market_card.rs  sidebar.rs  stat_card.rs
frontend/src/pages/: aftermarket_analyzer.rs  console.rs  dashboard.rs
