[package]
name = "slynqix-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.5", features = ["csr"] }
leptos_meta = { version = "0.5", features = ["csr"] }
leptos_router = { version = "0.5", features = ["csr"] }
log = "0.4"
wasm-bindgen = "0.2"
wasm-logger = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.2"
web-sys = { version = "0.3", features = [
    "Document", 
    "Element", 
    "HtmlElement", 
    "Window", 
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "Storage",
    "Location",
] }
gloo-storage = "0.2"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'